# winctx

./: .gitignore  Cargo.toml  Kick.toml  README.md
.github/workflows/: ci.yml  weekly.yml
examples/: clipboard.rs  copy_data.rs  multiple.rs  multiple_menus.rs  named_mutex.rs  registry.rs  show_notification.rs  showcase.rs
src/: area.rs  area_id.rs  autostart.rs  context_builder.rs  convert.rs  create_window.rs  error.rs  event.rs  event_loop.rs  icon.rs  icon_buffer.rs  icons.rs  item_id.rs  lib.rs  menu_id.rs  menu_item.rs  menu_item_id.rs  modify_area.rs  modify_menu_item.rs  named_mutex.rs  notification.rs  notification_area.rs  notification_icons.rs  notification_id.rs  notification_menu.rs  popup_menu.rs  registry.rs  sender.rs  token.rs  tools.rs  window.rs  window_builder.rs
src/clipboard/: clipboard_format.rs  mod.rs
src/event_loop/: event.rs  event_loop.rs  mod.rs  sender.rs  window_builder.rs
src/icon/: mod.rs  stock_icon.rs
src/window/: icon.rs  menu_manager.rs  mod.rs  window.rs
src/window_loop/: area_handle.rs  clipboard_manager.rs  icon.rs  icon_handle.rs  menu_handle.rs  menu_manager.rs  messages.rs  mod.rs  popup_menu_handle.rs  window_class_handle.rs  window_handle.rs  window_loop.rs
src/windows/: fake.rs  real.rs
