[package]
name = "winctx"
version = "0.0.7"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.68"
description = """
A minimally viable Windows context for Rust.
"""
documentation = "https://docs.rs/winctx"
readme = "README.md"
homepage = "https://github.com/udoprog/winctx"
repository = "https://github.com/udoprog/winctx"
license = "MIT OR Apache-2.0"
keywords = ["async", "windows"]
categories = ["asynchronous"]

[dependencies]
tokio = { version = "1.34.0", features = ["sync", "macros"] }
windows-core = "0.52.0"

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Registry",
]

[dev-dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
