[package]
name = "winctx"
version = "0.0.19"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.65"
description = """
A minimal window context for Rust on Windows.
"""
documentation = "https://docs.rs/winctx"
readme = "README.md"
homepage = "https://github.com/udoprog/winctx"
repository = "https://github.com/udoprog/winctx"
license = "MIT OR Apache-2.0"
keywords = ["async", "windows"]
categories = ["asynchronous"]

[dependencies]
tokio = { version = "1.34.0", features = ["sync", "macros"] }
windows-core = "0.52.0"

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
]

[dev-dependencies]
anyhow = "1.0.75"
image = "0.24.7"
tokio = { version = "1.34.0", features = ["full"] }
